<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- VAL INPUT -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/unitInputEditText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_from"
            android:layout_marginRight="@dimen/element_horizontal_margin"/>
        <!-- FROM RadioButton -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fromRadioGroup"
            android:layout_marginRight="@dimen/element_horizontal_margin">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromCentimeterRB"
                android:text="@string/text_centimeters">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromMetersRB"
                android:text="@string/text_meters">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromFeetRB"
                android:text="@string/text_feet">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromMilesRB"
                android:text="@string/text_miles">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromKilometersRB"
                android:text="@string/text_kilometers">
            </RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_to"
            android:layout_marginLeft="@dimen/element_horizontal_margin"
            android:layout_marginRight="@dimen/element_horizontal_margin"/>
        <!-- TO RadioButton -->
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toRadioGroup"
            android:layout_marginRight="@dimen/element_horizontal_margin">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toCentimeterRB"
                android:text="@string/text_centimeters">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toMetersRB"
                android:text="@string/text_meters">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toFeetRB"
                android:text="@string/text_feet">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toMilesRB"
                android:text="@string/text_miles">
            </RadioButton>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toKilometersRB"
                android:text="@string/text_kilometers">
            </RadioButton>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/convertButton"
        android:text="@string/text_convert"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextLabel"
            android:text="@string/text_result"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextValue"
            android:text="0"/>

    </LinearLayout>

</LinearLayout>