<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- VAL INPUT -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/moneyInputEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_from"
        android:layout_margin="@dimen/element_horizontal_margin"/>
    <!-- FROM Spinner -->
    <Spinner
        android:id="@+id/fromSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/currencies"
        android:layout_margin="@dimen/element_horizontal_margin">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_to"
        android:layout_margin="@dimen/element_horizontal_margin"/>
    <!-- TO Spinner -->
    <Spinner
        android:id="@+id/toSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/currencies"
        android:layout_margin="@dimen/element_horizontal_margin">

    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/convertButton"
        android:text="@string/text_convert"
        android:layout_margin="@dimen/element_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextLabel"
            android:text="@string/text_result"
            android:layout_marginRight="@dimen/element_horizontal_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultTextValue"
            android:text="0"/>

    </LinearLayout>
</LinearLayout>